Version 1.0.33
- edited download folder path to a random one

Version 1.0.32
- fix await error bug

Version 1.0.31
- code refactoring

Version 1.0.30
- code refactoring

Version 1.0.29
- fix prefix bug

Version 1.0.28
- added you-get option
- added dev-mode

Version 1.0.27
- new NetworkError management

Version 1.0.26
- fux bug on send to dev

Version 1.0.25
- changed logs for less flood

Version 1.0.24
- added X support

Version 1.0.23
- fix bug report error

Version 1.0.22
- fix bug report error

Version 1.0.21
- added send.error.to.user flag

Version 1.0.20
- update license

Version 1.0.19
- fix log level bug on windows

Version 1.0.18
- added more logs

Version 1.0.17
- added reply to specific message
- added instruction on linux for more updated ytdl library

Version 1.0.16
- added send to dev flag

Version 1.0.15
- intercepts not perfect url function

Version 1.0.14
- added first support for youtube login, by user + pass and by cookies

Version 1.0.13
- better bug report function

Version 1.0.12
- added twitter support

Version 1.0.11
- no spaces on video files
- fix for video download https://www.youtube.com/watch?v=DPgdYr-FXTQ

Version 1.0.10
- fix bug too large files for audio

Version 1.0.9
- fix bug too large files

Version 1.0.8
- added file size name limit

Version 1.0.7
- refactor constants file name1.
- added filter on youtube

Version 1.0.6
- changed download default directory

Version 1.0.5
- better string operations
- changed log file name

Version 1.0.4
- fixed youtube shorts download

Version 1.0.3
- added LICENSE

Version 1.0.2
- fix bug empty messages

Version 1.0.1
- fix bug shutdown
- fix bug empty messages

Version 1.0.0